# python-electric

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/examples/: cable_sizing.ipynb
docs/examples/LV_design_01/: LV_design_01.ipynb
docs/examples/LV_design_02/: LV_design_02.ipynb
docs/examples/LV_design_03/: LV_design_03.ipynb  LV_design_03.pxe
docs/examples/example_01/: ex01_LV_design.ipynb
docs/examples/misc/: ex1_millman.py
docs/examples/sizing/: ex1_cable_sizing_01.py  ex1_sizing_LV_network_01.ipynb  ex2_cable_sizing_02.py  ex3_cable_sizing_03.py  ex4_installation_sizing_01.ipynb
docs/sphinx/: sphinx_readme.md
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/api/: modules.rst  (+22 more)
src/python_electric/: __init__.py  pint_setup.py
src/python_electric/calc/: __init__.py  millman.py  phasor.py  quick.py
src/python_electric/equipment/: __init__.py  equipment.py
src/python_electric/general/: __init__.py  voltage_system.py
src/python_electric/gui/: __init__.py  build.py  components_window.py  main.py  models.py  topology_window.py  widgets.py
src/python_electric/materials/: __init__.py  conductors.py  insulation.py  soil.py
src/python_electric/misc/: __init__.py  voltage_system.py
src/python_electric/network/: __init__.py  config.py  graph.py  network.py  topology.py
src/python_electric/protection/: __init__.py  circuit_breaker.py  circuit_breaker_advisor.py  earthing.py  safety_curve.py
src/python_electric/short_circuit/: __init__.py
src/python_electric/sizing/: __init__.py
src/python_electric/utils/: __init__.py
(+45 files in other folders)
